Bug 518633 - Selection Actions Bar disappears when toggling off the visibility of the selection
Summary: Selection Actions Bar disappears when toggling off the visibility of the sele...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: 5.3.1
Platform: Android Android 14.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-04-06 18:58 UTC by Door1
Modified: 2026-04-16 15:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Door1 2026-04-06 18:58:44 UTC
SUMMARY
Selection Actions Bar disappears when toggling off the visibility of the selection

This shouldn't happen because the selection still technically exists even if you toggle the visibility of the selection "marching ants."

Only when you perform a Deselect does the selection truly stop existing.

STEPS TO REPRODUCE
1. Select something on the canvas to show Selection Actions Bar.
2. Toggle off the visibility of selection: Select -> Display Selection

OBSERVED RESULT
Selection Actions Bar disappears

EXPECTED RESULT
Selection Actions Bar doesn't disappear

SOFTWARE/OS VERSIONS
Krita 5.3.1
arm64
Android 16
Comment 1 Luna 2026-04-06 19:07:43 UTC
This would be trivial to fix, but i am not sure if it needs fixing. To me it makes sense that the SAB would disappear when disabling the other selection decoration.
Comment 2 Door1 2026-04-06 19:15:19 UTC
^ My reasoning is that someone who has the bar enabled might be misled into thinking the absence of the bar suggests the lack of an existing selection. I figured that if someone didn't care for the bar, they'd disable it entirely in the Configure Krita menu. But that's just my opinion, of course. :)
Comment 3 Bug Janitor Service 2026-04-08 20:30:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2749
Comment 4 Dmitry Kazakov 2026-04-16 15:40:45 UTC
Git commit f6673f9a53d1be10c4962a7b869de8492d5f66ec by Dmitry Kazakov, on behalf of Luna Lovecraft.
Committed on 16/04/2026 at 15:40.
Pushed by dkazakov into branch 'master'.

Fix SAP disappearing when toggling selection visibility

M  +11   -3    libs/ui/kis_selection_decoration.cc
M  +4    -0    libs/ui/kis_selection_decoration.h
M  +1    -1    libs/ui/kis_selection_manager.cc

https://invent.kde.org/graphics/krita/-/commit/f6673f9a53d1be10c4962a7b869de8492d5f66ec
Comment 5 Dmitry Kazakov 2026-04-16 15:42:56 UTC
Git commit 4159f14f01053bc8af20c1001034f558de684fb3 by Dmitry Kazakov, on behalf of Luna Lovecraft.
Committed on 16/04/2026 at 15:42.
Pushed by dkazakov into branch 'krita/6.0'.

Fix SAP disappearing when toggling selection visibility

M  +11   -3    libs/ui/kis_selection_decoration.cc
M  +4    -0    libs/ui/kis_selection_decoration.h
M  +1    -1    libs/ui/kis_selection_manager.cc

https://invent.kde.org/graphics/krita/-/commit/4159f14f01053bc8af20c1001034f558de684fb3