Fix SAP disappearing when toggling selection visibility

BUG:518633